v1.6.0, waystone, wg flags, gp fix, CarryOnModule fix, console commands, Restore command and carryOn registry file, Clear Command
TODO